--- a/admin/src/app/features/content-type/content-type.component.scss
+++ b/admin/src/app/features/content-type/content-type.component.scss
@@ -13,60 +13,25 @@
     margin-bottom: 24px;
   }
 
-  .room-controls {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 1rem;
-
-    input[type="text"],
-    select {
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      border: 1px solid #dce1e7;
-      border-radius: 0.5rem;
-      flex-grow: 1;
-    }
-
-    .add-room {
-      background-color: #2f80ed;
-      color: #fff;
-      border: none;
-      border-radius: 0.5rem;
-      padding: 0.5rem 1.2rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-
-      &:hover {
-        background-color: #256ad2;
-      }
-    }
-  }
-
-  .table-header,
-  .table-row {
+  .table-header {
     display: grid;
-    grid-template-columns: 0.5fr 1.5fr 1fr 1fr 1fr 1.5fr;
+    grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 0.5fr 0.5fr;
     border-bottom: 1px solid #eee;
     font-weight: 500;
     align-items: center;
-  }
-
-  .table-header {
     background-color: #f5f5f5;
     border-radius: 6px;
     padding: 6px 0;
   }
 
   // căn giữa nút hành động
-  .table-header>div:last-child {
+  .table-header > div:last-child {
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-  .table-header>div,
-  .table-row>div {
+  .table-header > div {
     padding: 8px 12px;
     overflow: hidden;
     white-space: nowrap;
@@ -188,7 +153,6 @@
       border-radius: 4px;
       border: 1px solid #ccc;
     }
-
 
     .active {
       color: green;
