Refactor and enhance website content management module
Renamed and refactored all website content related files and services to use 'website-content' naming convention. Introduced new components for filtering, listing, and editing website content, including their HTML, SCSS, TypeScript, and test files. Updated routes and service logic for improved CRUD operations and filtering. Added a date formatting pipe and updated content type list to use it. Removed old websitecontent files and updated type definitions as needed. Added new image assets to the backend.

--- a/admin/src/app/features/content-type/content-type-list/content-type-list.component.html
+++ b/admin/src/app/features/content-type/content-type-list/content-type-list.component.html
@@ -2,7 +2,7 @@
   <div>{{ (filter.page - 1) * filter.limit + i + 1 }}</div>
   <div>{{ contentType.name }}</div>
   <div>{{ contentType.description }}</div>
-  <div>{{ contentType.updated_at }}</div>
+  <div>{{ contentType.updatedAt | formatDate}}</div>
   <div>
     <ng-container *ngIf="contentType.website_content_list">
       <div
