--- a/admin/src/app/features/main-room-class/main-room-class.component.html
+++ b/admin/src/app/features/main-room-class/main-room-class.component.html
@@ -1,60 +1,15 @@
 <div class="roomtype-management-card">
   <h2>Quản lý loại phòng chính</h2>
 
-  <!-- Search bar  -->
-  <div
-    class="room-controls"
-    style="display: flex; align-items: center; gap: 8px"
-  >
-    <div
-      class="form-floating form-floating-custom mb-3"
-      style="position: relative; flex: 1"
-    >
-      <input
-        type="email"
-        class="form-control"
-        id="floatingInput"
-        placeholder="name@example.com"
-        style="width: 100%; padding-right: 30px"
-        [(ngModel)]="filter.keyword"
-        (ngModelChange)="onFilterChange()"
-      />
-      <label for="floatingInput">Tìm kiếm</label>
-    </div>
-
-    <button class="add-room" (click)="onOpenPopup(true)">
-      + Thêm loại phòng chính
-    </button>
-  </div>
-
-  <!-- 🧹 Thanh lọc -->
-  <div class="filter-bar">
-    <!-- Lọc trạng thái -->
-    <div>
-      <label for="status">Trạng thái:</label>
-      <select
-        id="status"
-        [(ngModel)]="filter.status"
-        name="status"
-        (ngModelChange)="onFilterChange()"
-      >
-        <option value="">Tất cả</option>
-        <option value="true">Đang hoạt động</option>
-        <option value="false">Vô hiệu hóa</option>
-      </select>
-    </div>
-
-    <!-- Nút sắp xếp theo trạng thái -->
-    <div>
-      <label>Sắp xếp:</label>
-      <button [(ngModel)]="filter.sortOrder" (click)="onFilterChange('status')">
-        Trạng thái: {{ filter.sortOrder === "asc" ? "↑" : "↓" }}
-      </button>
-    </div>
-  </div>
+  <!-- Filter -->
+  <app-common-filter-bar
+    [filter]="filter"
+    (filterChange)="onFilterChange($event)"
+    (openAdd)="onOpenPopup(true)"
+    [label]="'Thêm loại phòng chính'"
+  ></app-common-filter-bar>
 
   <!-- Popup Thêm loại phòng chính -->
-
   <div class="popup-add-popup" *ngIf="isAddPopupOpen">
     <div class="popup-content">
       <h2>Thêm loại phòng chính</h2>
